edits to syllabus

--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -46,7 +46,7 @@ Third presentation & 15 \% & May 5th, 2026 \\ \hline
 \textit{\textbf{Course Objectives}:}
 \begin{itemize}
 \item Performing a literature review on a significant topic of interest within physics and engineering
-\item Scientific writing at the professional level, wit logical flow, and citations
+\item Scientific writing at the professional level, with logical flow, and citations
 \item Scientific communication at the professional level
 \begin{enumerate}
     \item Scientific speaking with a live audience
@@ -90,5 +90,10 @@ Third presentation & 15 \% & May 5th, 2026 \\ \hline
         \item Handshake
         \item Physics Today Jobs
     \end{enumerate}
+\end{itemize} \vspace{1cm}
+\textbf{Special topics regarding career preparation.}  The following topics will be presented:
+\begin{itemize}
+\item Resume creation and preparation
+\item Structure of an application for admission to a graduate program
 \end{itemize}
 \end{document}
